fix: update Discord notification configuration keys for consistency and improve error handling